# crust-engine

./: Cargo.toml
src/: buffer.rs  components.rs  error.rs  game.rs  game_state.rs  geometry.rs  image.rs  lines.rs  main.rs  text.rs
src/components/: actor.rs  mod.rs  object.rs
src/game/: actor.rs  character.rs  game_state.rs  mod.rs  object.rs  pathfinding.rs  scenery.rs  walkbox.rs
src/geometry/: graph.rs  line.rs  lines.rs  mod.rs  point.rs  polygon.rs  rect.rs  vector.rs
