[package]
name = "adventure_game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11"
png = "0.17"
winit = { version = "0.27", default_features = false, features = ["wayland"] }

tracing = "0.1"
bdf = "0.6.0"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# thiserror = "1.0.38"
